<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui_seller.add_product.AddProductActivity">

        <com.example.testbase.custom_view.ToolbarApp
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            app:tb_title="Thêm sản phẩm" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/btn_save"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:id="@+id/layout_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp14"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bg_add_image" />

                <EditText
                    android:id="@+id/edt_name"
                    style="@style/Background_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/name_product" />

                <EditText
                    android:id="@+id/edt_description"
                    style="@style/Background_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/description" />

                <EditText
                    android:id="@+id/edt_quantity"
                    style="@style/Background_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/quantity" />

                <EditText
                    android:id="@+id/edt_price"
                    style="@style/Background_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/price" />

                <Spinner
                    android:id="@+id/sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp24"
                    android:background="@color/transparent"
                    android:spinnerMode="dialog" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_save"
            style="@style/Background_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="51dp"
            android:layout_marginBottom="20dp"
            android:text="@string/str_save"
            app:layout_constraintBottom_toBottomOf="parent" />

    </RelativeLayout>

</layout>